2007-05-25  mefyl  <mefyl@lrde.epita.fr>

	Update externals.

2007-05-25  mefyl  <mefyl@lrde.epita.fr>

	Use Unix networking under MinGW
	* src/network/bsdnet/connection.cc,
	* src/network/bsdnet/network.cc: Here.

2007-05-03  Akim Demaille  <demaille@gostai.com>

	Finish the merge -r 1038:1078
	I guess I ran "svn revert src/ughostconnection.cc" when I meant
	"svn resolved", since Emacs had the right contents, but the
	file on the disk did not have the modifications.
	make check passes again.
	* src/ughostconnection.cc: Apply the changes, but getting rid of
	the useless casts.
	* src/userver.cc: Don't activate debug traces.

2007-05-03  Akim Demaille  <demaille@gostai.com>

	Minor changes to improve the similarity with the code before
	the breaking merge.  Of course, it still does not make check.
	* src/ucommand.cc, src/uobject.cc: Formatting changes.
	Use libport::mhas.
	Scope shortening.

2007-05-03  Akim Demaille  <demaille@gostai.com>

	svn merge -r 1038:1078 https://svn.gostai.com/svn/kernel1/branches/1.0
	NB: Since there are some files which have moved (the exported
	headers are now in include/kernel, not in src/), svn merge failed
	to do it right:
	svn merge -r 1038:1078 https://svn.gostai.com/svn/kernel1/branches/1.0
	C    src/ucommand.cc
	Skipped missing target: 'src/uconnection.hh'
	U    src/parser/bison/utoken.l
	U    src/parser/bison/ugrammar.y
	U    src/ucommand.hh
	C    src/uqueue.hh
	C    src/uobject.cc
	U    src/unamedparameters.cc
	C    src/uvalue.cc
	C    src/uvariable.cc
	U    src/uvar.cc
	C    src/userver.cc
	U    src/unamedparameters.hh
	C    src/uconnection.cc
	Skipped missing target: 'src/uvariable.hh'
	C    src/ughostconnection.cc
	Skipped missing target: 'ChangeLog'
	C    tests-local.mk
	U    NEWS
	 U   .

	So I had to complete the command with the following:
	svn diff -r 1038:1078 https://svn.gostai.com/svn/kernel1/branches/1.0/src/uconnection.hh | patch include/kernel/uconnection.hh