@@ -1,3 +1,9 @@
+2007-05-25  Benoit Sigoure  <tsuna@lrde.epita.fr>
+
+	Partial revert of r1111.
+	* src/network/bsdnet/network.cc: Don't try to use `pipe' or pthread
+	functions on MinGW.
+
 2007-05-25  mefyl  <mefyl@lrde.epita.fr>
 
 	Update externals.
